edit place of images

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Apprentis - Votre centre de langues</title>
 
     <!-- icon -->
-    <link rel="icon" href="/assets/images/icon.png" />
+    <link rel="icon" href="/assets/images/logo/logo.png" />
 
     <!-- link to file css -->
     <link rel="stylesheet" href="/assets/css/style.css" />
@@ -59,7 +59,7 @@
       <nav>
         <div class="container">
           <a href="#" class="logo">
-            <img src="assets/images/icon.png" alt="" />
+            <img src="assets/images/logo/logo.png" alt="" />
             <h1>apprentis center</h1>
           </a>
           <ul class="page_nav">
@@ -83,7 +83,7 @@
       <div class="slide-swp mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="assets/images/slide-1.jpg" alt="" />
+            <img src="assets/images/slides/slide-1.jpg" alt="" />
             <div class="content_swp">
               <h1>Bienvenue chez Apprentis Center</h1>
               <p>
@@ -95,7 +95,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/slide-2.jpg" alt="" />
+            <img src="assets/images/slides/slide-2.jpg" alt="" />
             <div class="content_swp">
               <h1>À propos de Apprentis Center</h1>
               <p>
@@ -108,7 +108,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/slide-3.jpg" alt="" />
+            <img src="assets/images/slides/slide-3.jpg" alt="" />
             <div class="content_swp">
               <h1>Nos Cours</h1>
               <p>
@@ -185,10 +185,10 @@
           </div>
         </div>
         <div class="about_images">
-          <img class="main_img" src="assets/images/about-1.jpg" alt="" />
+          <img class="main_img" src="assets/images/about/about-1.jpg" alt="" />
           <div class="second_img">
-            <img src="assets/images/about-2.jpg" alt="" />
-            <img src="assets/images/about-3.jpg" alt="" />
+            <img src="assets/images/about/about-2.jpg" alt="" />
+            <img src="assets/images/about/about-3.jpg" alt="" />
           </div>
         </div>
       </div>
@@ -208,7 +208,7 @@
         </div>
         <div class="courses">
           <div class="single_course">
-            <img src="assets/images/course-1.jpg" alt="" />
+            <img src="assets/images/courses/course-1.jpg" alt="" />
             <div class="content_text">
               <span class="name_course">Français</span>
               <h2>Cours de Français - Niveau Débutant à Avancé</h2>
@@ -223,7 +223,7 @@
           </div>
 
           <div class="single_course">
-            <img src="assets/images/course-2.jpg" alt="" />
+            <img src="assets/images/courses/course-2.jpg" alt="" />
             <div class="content_text">
               <span class="name_course">Anglais</span>
               <h2>Cours d'Anglais - Conversation et Grammaire</h2>
@@ -238,7 +238,7 @@
           </div>
 
           <div class="single_course">
-            <img src="assets/images/course-3.jpg" alt="" />
+            <img src="assets/images/courses/course-3.jpg" alt="" />
             <div class="content_text">
               <span class="name_course">Espagnol</span>
               <h2>Cours d'Espagnol - Du débutant à l'expert</h2>
@@ -252,7 +252,7 @@
           </div>
 
           <div class="single_course">
-            <img src="assets/images/course-4.jpg" alt="" />
+            <img src="assets/images/courses/course-4.jpg" alt="" />
             <div class="content_text">
               <span class="name_course">Allemand</span>
               <h2>Cours d'Allemand - Pour tous les niveaux</h2>
@@ -283,7 +283,7 @@
           <div class="swiper-wrapper">
             <div class="single_plan swiper-slide">
               <div class="title_plan">
-                <img src="assets/images/icon-plan-1.svg" alt="" />
+                <img src="assets/images/tarif/icon-plan-1.svg" alt="" />
                 <h1>Single</h1>
               </div>
               <div class="text_plan">
@@ -326,7 +326,7 @@
 
             <div class="single_plan swiper-slide">
               <div class="title_plan">
-                <img src="assets/images/icon-plan-2.svg" alt="" />
+                <img src="assets/images/tarif/icon-plan-2.svg" alt="" />
                 <h1>Dual</h1>
               </div>
               <div class="text_plan">
@@ -368,7 +368,7 @@
 
             <div class="single_plan swiper-slide">
               <div class="title_plan">
-                <img src="assets/images/icon-plan-3.svg" alt="" />
+                <img src="assets/images/tarif/icon-plan-3.svg" alt="" />
                 <h1>Triple</h1>
               </div>
               <div class="text_plan">
@@ -411,7 +411,7 @@
 
             <div class="single_plan swiper-slide">
               <div class="title_plan">
-                <img src="assets/images/icon-plan-4.svg" alt="" />
+                <img src="assets/images/tarif/icon-plan-4.svg" alt="" />
                 <h1>Unlimited</h1>
               </div>
               <div class="text_plan">
