add button back to top and custom responsive

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 des cours de soutien en langues, adaptés à vos besoins et
                 objectifs.
               </p>
-              <a href="#">savoir plus</a>
+              <a href="#about">savoir plus</a>
             </div>
           </div>
           <div class="swiper-slide">
@@ -113,7 +113,7 @@
                 sur mesure, conçus pour renforcer vos compétences linguistiques
                 et vous préparer aux examens officiels.
               </p>
-              <a href="#">Découvrir notre histoire</a>
+              <a href="#about">Découvrir notre histoire</a>
             </div>
           </div>
           <div class="swiper-slide">
@@ -127,7 +127,7 @@
                 l'arabe. Chaque cours est conçu pour répondre aux besoins
                 spécifiques de nos étudiants.
               </p>
-              <a href="#">Explorer nos cours</a>
+              <a href="#course">Explorer nos cours</a>
             </div>
           </div>
         </div>
@@ -176,7 +176,7 @@
             </div>
           </div>
           <div class="about_bottom">
-            <a href="#" class="btn_contact">contactez-nous</a>
+            <a href="#contact" class="btn_contact">contactez-nous</a>
             <ul>
               <a href="#"
                 ><li><i class="fa-brands fa-instagram"></i></li
@@ -329,7 +329,7 @@
                 </li>
               </ul>
               <div class="bottom_plan">
-                <a href="#">Commencez maintenant</a>
+                <a href="#contact">Commencez maintenant</a>
               </div>
             </div>
 
@@ -371,7 +371,7 @@
                 </li>
               </ul>
               <div class="bottom_plan">
-                <a href="#">Commencez maintenant</a>
+                <a href="#contact">Commencez maintenant</a>
               </div>
             </div>
 
@@ -414,7 +414,7 @@
                 </li>
               </ul>
               <div class="bottom_plan">
-                <a href="#">Commencez maintenant</a>
+                <a href="#contact">Commencez maintenant</a>
               </div>
             </div>
 
@@ -457,7 +457,7 @@
                 </li>
               </ul>
               <div class="bottom_plan">
-                <a href="#">Commencez maintenant</a>
+                <a href="#contact">Commencez maintenant</a>
               </div>
             </div>
           </div>
@@ -524,6 +524,8 @@
       </div>
     </section>
 
+    <button class="btn_back_to_top"><i class="fa-solid fa-arrow-up"></i></button>
+
     <footer>
       <div class="container">
         <div class="footer_sections">
@@ -577,7 +579,7 @@
           </div>
         </div>
         <div class="bottom_footer">
-          <p>&copy; <span>Apprentis</span>, All Right Reserved. Designed By <a href="#">Yassine_ChM</a></p>
+          <p>&copy; <span>Apprentis</span>, All Right Reserved. Designed By <a href="https://www.linkedin.com/in/yassine-chmarekh/" target="_blank">Yassine_ChM</a></p>
         </div>
       </div>
     </footer>
