add required to inputs

--- a/index.html
+++ b/index.html
@@ -504,14 +504,14 @@
             </p>
             <form>
               <div class="two_inputs">
-                <input type="text" id="name" placeholder="Votre Nom">
-                <input type="text" id="email" placeholder="Votre Email">
+                <input type="text" id="name" placeholder="Votre Nom" required>
+                <input type="text" id="email" placeholder="Votre Email" required>
               </div>
               <div class="one_input">
-                <input type="text" id="subject" placeholder="Sujet">
+                <input type="text" id="subject" placeholder="Sujet" required>
               </div>
               <div class="one_input">
-                <textarea placeholder="Message" id="message" rows="10"></textarea>
+                <textarea placeholder="Message" id="message" rows="10" required></textarea>
               </div>
               <button type="submit">Envoyer</button>
             </form>
