--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <img src="assets/images/logo/logo.png" alt="" />
             <h1>apprentis center</h1>
           </a>
+          <div class="bg_overlay" onclick="close_menu()"></div>
           <ul class="page_nav">
             <div class="top_menu_mobile">
               <div class="logo_mobile">
@@ -74,7 +75,6 @@
                 <h1>apprentis center</h1>
               </div>
               <div class="close_menu"><i onclick="close_menu()" class="fa-solid fa-xmark"></i></div>
-              <div class="bg_overlay" onclick="close_menu()"></div>
             </div>
             <li class="active"><a href="index.html">accueil</a></li>
             <li><a href="#about">a propos</a></li>
@@ -233,6 +233,7 @@
                 français avec confiance grâce à des méthodes interactives et des
                 professeurs expérimentés.
               </p>
+              <a href="inscription.html">inscrivez-vous maintenant !</a>
             </div>
           </div>
 
@@ -248,6 +249,7 @@
                 des leçons complètes adaptées à tous les niveaux, avec un accent
                 sur la pratique et la fluidité.
               </p>
+              <a href="inscription.html">inscrivez-vous maintenant !</a>
             </div>
           </div>
 
@@ -262,6 +264,7 @@
                 vivante et utile. Grâce à des exercices variés et des supports
                 culturels, vous apprendrez à parler l'espagnol comme un natif.
               </p>
+              <a href="inscription.html">inscrivez-vous maintenant !</a>
             </div>
           </div>
 
@@ -277,6 +280,7 @@
                 Apprenez à comprendre et à communiquer en allemand dans divers
                 contextes.
               </p>
+              <a href="inscription.html">inscrivez-vous maintenant !</a>
             </div>
           </div>
         </div>
@@ -596,5 +600,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/swiper.js"></script>
+    <script src="assets/js/contact.js"></script>
   </body>
 </html>
